# long-context-vs-rag

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: clear_cache.py  create_context_corpus.py  download_loogle_dataset.py  run_context_in_prompt.py  run_rag_comparison.py  simple_context_evaluation.py  verify_loogle_data.py
src/: __init__.py
src/data/: loogle_loader.py
src/evaluation/: loogle_evaluator.py  metrics.py
src/long_context_rag/: __init__.py  pipeline.py
src/regular_rag/: __init__.py  chunker.py  embedder.py  pipeline.py  retriever.py  vector_store.py
src/utils/: config.py  llm_client.py
