[project]
name = "long-rag-vs-regular-rag"
version = "0.1.0"
description = "Comparison of Regular RAG vs Long-Context RAG on LooGLE: cost, speed, and accuracy under a fair setup"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Uri Alon" }
]
dependencies = [
    "chromadb>=1.0.16",
    "datasets>=4.0.0",
    "google-genai>=1.29.0",
    "google-generativeai>=0.8.5",
    "instructor>=1.10.0",
    "ipykernel>=6.30.1",
    "litellm>=1.75.5.post1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
    "tenacity>=9.1.2",
]

[project.urls]
Repository = "https://github.com/urialon/long-rag-vs-regular-rag"
dependencies = [
    "chromadb>=1.0.15",
    "datasets>=4.0.0",
    "google-generativeai>=0.8.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.0.0",
    "torch",
    "tqdm>=4.67.1",
]
